@@ -793,15 +793,6 @@ name|maxDoc
 argument_list|()
 index|]
 decl_stmt|;
-if|if
-condition|(
-name|retArray
-operator|.
-name|length
-operator|>
-literal|0
-condition|)
-block|{
 name|TermDocs
 name|termDocs
 init|=
@@ -828,26 +819,6 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
-if|if
-condition|(
-name|termEnum
-operator|.
-name|term
-argument_list|()
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"no terms in field "
-operator|+
-name|field
-argument_list|)
-throw|;
-block|}
 do|do
 block|{
 name|Term
@@ -860,6 +831,10 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
+name|term
+operator|==
+literal|null
+operator|||
 name|term
 operator|.
 name|field
@@ -929,7 +904,6 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 name|store
 argument_list|(
@@ -1040,15 +1014,6 @@ name|maxDoc
 argument_list|()
 index|]
 decl_stmt|;
-if|if
-condition|(
-name|retArray
-operator|.
-name|length
-operator|>
-literal|0
-condition|)
-block|{
 name|TermDocs
 name|termDocs
 init|=
@@ -1075,26 +1040,6 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
-if|if
-condition|(
-name|termEnum
-operator|.
-name|term
-argument_list|()
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"no terms in field "
-operator|+
-name|field
-argument_list|)
-throw|;
-block|}
 do|do
 block|{
 name|Term
@@ -1107,6 +1052,10 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
+name|term
+operator|==
+literal|null
+operator|||
 name|term
 operator|.
 name|field
@@ -1176,7 +1125,6 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 name|store
 argument_list|(
@@ -1259,15 +1207,6 @@ name|maxDoc
 argument_list|()
 index|]
 decl_stmt|;
-if|if
-condition|(
-name|retArray
-operator|.
-name|length
-operator|>
-literal|0
-condition|)
-block|{
 name|TermDocs
 name|termDocs
 init|=
@@ -1294,26 +1233,6 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
-if|if
-condition|(
-name|termEnum
-operator|.
-name|term
-argument_list|()
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"no terms in field "
-operator|+
-name|field
-argument_list|)
-throw|;
-block|}
 do|do
 block|{
 name|Term
@@ -1326,6 +1245,10 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
+name|term
+operator|==
+literal|null
+operator|||
 name|term
 operator|.
 name|field
@@ -1390,7 +1313,6 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 name|store
 argument_list|(
@@ -1487,15 +1409,6 @@ operator|+
 literal|1
 index|]
 decl_stmt|;
-if|if
-condition|(
-name|retArray
-operator|.
-name|length
-operator|>
-literal|0
-condition|)
-block|{
 name|TermDocs
 name|termDocs
 init|=
@@ -1540,26 +1453,6 @@ literal|null
 expr_stmt|;
 try|try
 block|{
-if|if
-condition|(
-name|termEnum
-operator|.
-name|term
-argument_list|()
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"no terms in field "
-operator|+
-name|field
-argument_list|)
-throw|;
-block|}
 do|do
 block|{
 name|Term
@@ -1572,6 +1465,10 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
+name|term
+operator|==
+literal|null
+operator|||
 name|term
 operator|.
 name|field
@@ -1726,7 +1623,6 @@ name|mterms
 operator|=
 name|terms
 expr_stmt|;
-block|}
 block|}
 name|StringIndex
 name|value
@@ -2046,15 +1942,6 @@ name|maxDoc
 argument_list|()
 index|]
 decl_stmt|;
-if|if
-condition|(
-name|retArray
-operator|.
-name|length
-operator|>
-literal|0
-condition|)
-block|{
 name|TermDocs
 name|termDocs
 init|=
@@ -2081,26 +1968,6 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
-if|if
-condition|(
-name|termEnum
-operator|.
-name|term
-argument_list|()
-operator|==
-literal|null
-condition|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"no terms in field "
-operator|+
-name|field
-argument_list|)
-throw|;
-block|}
 do|do
 block|{
 name|Term
@@ -2113,6 +1980,10 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
+name|term
+operator|==
+literal|null
+operator|||
 name|term
 operator|.
 name|field
@@ -2182,7 +2053,6 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 name|store
 argument_list|(
